--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ubaldo Hervás
 description: Experimentación Online
 url: "https://ubaldohervas.github.io"
-baseurl: "/experimentacion-online-codigos"
+baseurl: ""
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
