--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,5 @@ title: Ubaldo Hervás
 description: Experimentación Online
 url: "https://ubaldohervas.github.io"
 baseurl: ""
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: jekyll-theme-cayman   # ← usa el tema integrado
+
