--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ubaldo Hervás
-description: Códigos y notas de experimentación online
+description: Data for better products
 url: "https://ubaldohervas.github.io"
 baseurl: ""
 theme: jekyll-theme-cayman
