--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ubaldo Hervás
 description: "Data for better products"
-url: "https://ubaldohervas.github.io"
+url: "https://experimentacion-online.github.io"
 baseurl: ""
 theme: jekyll-theme-cayman
